Closed
Bug 1867753
Opened 2 years ago
Closed 2 years ago
Perma /builds/worker/checkouts/gecko/js/src/wasm/WasmBuiltinModule.cpp:257:28: error: 'IntGemmFuncs' defined but not used [-Werror=unused-variable] when Gecko 122 merges to Beta on 2023-12-18
Categories
(Firefox Build System :: General, defect, P1)
Firefox Build System
General
Tracking
(firefox-esr115 unaffected, firefox120 unaffected, firefox121 unaffected, firefox122blocking verified)
VERIFIED
FIXED
122 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox120 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | blocking | verified |
People
(Reporter: abutkovits, Assigned: rhunt)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Comment 1•2 years ago
|
||
:rhunt, since you are the author of the regressor, bug 1863794, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Flags: needinfo?(rhunt)
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → rhunt
Severity: -- → S3
Flags: needinfo?(rhunt)
Priority: -- → P1
| Assignee | ||
Comment 2•2 years ago
|
||
Pushed by rhunt@eqrion.net:
https://hg.mozilla.org/integration/autoland/rev/460949efc68c
Fix ifdefs. r=bvisness
Comment 5•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•