Bug 1867753 - Fix ifdefs. r=bvisness

Differential Revision: https://phabricator.services.mozilla.com/D195293